# fast-lightgbm-inference

./: .gitignore  Cargo.toml  Dockerfile  README.md  pyproject.toml
examples/breast-cancer/: training.ipynb
feature-pipe/: Cargo.toml
feature-pipe/src/: config.rs  error.rs  input.rs  lib.rs  transformers.rs
loadtesting/: locust_workers.sh  main.py
rust-transformer/: Cargo.toml  README.md  pyproject.toml
rust-transformer/python/odt/: __init__.py  config.py  manage.py  transformers.py
rust-transformer/src/: lib.rs
src/: config.rs  error.rs  main.rs  predictor.rs  routes.rs  utils.rs
