[tool.poetry]
name = "training"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^1.5.0"
lightgbm = "^3.3.2"
odt = { file = "target/wheels/odt-0.3.4-cp39-abi3-manylinux_2_28_x86_64.whl" }

[tool.poetry.dev-dependencies]
ipykernel = "^6.15.3"
autopep8 = "^1.7.0"
yapf = "^0.32.0"
locust = "^2.12.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
