[package]
name = "rust-transformer"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[lib]
name = "odt"
crate-type = ["cdylib"]


[dependencies]
pyo3 = { version = "0.17", features = ["extension-module", "abi3-py39"] }
numpy = "0.17"
feature-pipe = { path = "../feature-pipe" }

[package.metadata.maturin]
python-source = "python"
name = "odt._odt"